Co-authored-by: aangeles1 <aangeles1@users.noreply.github.com> Co-authored-by: aditijhaa2 <aditijhaa2@users.noreply.github.com> Co-authored-by: nebyubaye <nebyubaye@users.noreply.github.com> Co-authored-by: lakeithaIT2022 <lakeithaIT2022@users.noreply.github.com>

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,7 +11,52 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Task Manager</title>
+    <!-- #1 header/title -->
+    <h1>TASK LIST</h1>
+    <form>m
+      Name
+      <input type="text" name="Name" size="30" />
+      <br />
+      <br />
+      Description
+      <input type="text" name="Description" size="30" />
+      <br />
+      <br />
+      Assigned to
+      <input type="text" name="Assigned to " size="30" />
+      <br />
+      <br />
+      Due date
+      <input type="text" name="Due date " size="30" />
+      <br />
+      <br />
+    </form>
   </head>
-  <body></body>
+  <body>
+    <!-- #2 New tasks task name + placeholder -->
+
+    <!-- #3 task description + textbox -->
+
+    <!-- #4 Assigned to + due date -->
+
+    <!-- #5 Add task -->
+
+    <!-- #6 Task cards section -->
+    <div></div>
+    <div class="task-cards">
+      <div class="card">
+        <div class="card-body">
+          <ul class="card-text" style="list-style: none">
+            <li>Task Name</li>
+            <li>Task Description</li>
+            <li>Assigned To</li>
+            <li>Due Date</li>
+            <li>Status</li>
+          </ul>
+          <input class="form-check-input float-right" type="checkbox" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
