--- a/assets/index.html
+++ b/assets/index.html
@@ -44,6 +44,15 @@
 
     <!-- #6 Task cards section -->
     <div></div>
+    <div class="task-list">
+      <ul class="list-group">
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Dapibus ac facilisis in</li>
+        <li class="list-group-item">Morbi leo risus</li>
+        <li class="list-group-item">Porta ac consectetur ac</li>
+        <li class="list-group-item">Vestibulum at eros</li>
+      </ul>
+    </div>
     <div class="task-cards">
       <div class="card">
         <div class="card-body">
