--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Task Manager</title>
+
     <!-- #1 header/title -->
     <h1>TASK LIST</h1>
-    <form>m
+    <form>
       Name
       <input type="text" name="Name" size="30" />
       <br />
@@ -43,29 +44,104 @@
     <!-- #5 Add task -->
 
     <!-- #6 Task cards section -->
-    <div></div>
-    <div class="task-list">
-      <ul class="list-group">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-      </ul>
+    <div class="task-section">
+      <hr style="width:40%;text-align:left;margin-left:0; border-width: 3px; border-color: teal">
     </div>
-    <div class="task-cards">
-      <div class="card">
-        <div class="card-body">
-          <ul class="card-text" style="list-style: none">
-            <li>Task Name</li>
-            <li>Task Description</li>
-            <li>Assigned To</li>
-            <li>Due Date</li>
-            <li>Status</li>
-          </ul>
-          <input class="form-check-input float-right" type="checkbox" />
+    <div class="tasks">
+        <h1 class="tasks-section ml-3 mt-5">Tasks</h1>
+      <div class="task-list ml-3 mt-5" style="width: 25rem">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Laundry
+            <div class="task-cards">
+              <div class="card  border-dark border-5 my-5 ml-3" style="width: 18rem">
+                <div class="card-body">
+                  <ul class="card-text" style="list-style: none">
+                    <div class="d-flex justify-content-end">
+                      <input class="form-check-input" type="checkbox" />
+                    </div>
+                    <li>Task Name</li>
+                    <li>Task Description</li>
+                    <li>Assigned To</li>
+                    <li>Due Date</li>
+                    <li>Status</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">Dishes
+            <div class="task-cards">
+              <div class="card  border-dark border-5 my-5 ml-3" style="width: 18rem">
+                <div class="card-body">
+                  <ul class="card-text" style="list-style: none">
+                    <div class="d-flex justify-content-end">
+                      <input class="form-check-input" type="checkbox" />
+                    </div>
+                    <li>Task Name</li>
+                    <li>Task Description</li>
+                    <li>Assigned To</li>
+                    <li>Due Date</li>
+                    <li>Status</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">Lawn
+            <div class="task-cards">
+              <div class="card  border-dark border-5 my-5 ml-3" style="width: 18rem">
+                <div class="card-body">
+                  <ul class="card-text" style="list-style: none">
+                    <div class="d-flex justify-content-end">
+                      <input class="form-check-input" type="checkbox" />
+                    </div>
+                    <li>Task Name</li>
+                    <li>Task Description</li>
+                    <li>Assigned To</li>
+                    <li>Due Date</li>
+                    <li>Status</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">Vacuum
+            <div class="task-cards">
+              <div class="card  border-dark border-5 my-5 ml-3" style="width: 18rem">
+                <div class="card-body">
+                  <ul class="card-text" style="list-style: none">
+                    <div class="d-flex justify-content-end">
+                      <input class="form-check-input" type="checkbox" />
+                    </div>
+                    <li>Task Name</li>
+                    <li>Task Description</li>
+                    <li>Assigned To</li>
+                    <li>Due Date</li>
+                    <li>Status</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">Classwork
+            <div class="task-cards">
+        <div class="card  border-dark border-5 my-5 ml-3" style="width: 18rem">
+          <div class="card-body">
+            <ul class="card-text" style="list-style: none">
+              <div class="d-flex justify-content-end">
+                <input class="form-check-input" type="checkbox" />
+              </div>
+              <li>Task Name</li>
+              <li>Task Description</li>
+              <li>Assigned To</li>
+              <li>Due Date</li>
+              <li>Status</li>
+            </ul>
+          </div>
         </div>
       </div>
+          </li>
+        </ul>
     </div>
   </body>
 </html>
