reconnect css link and colorize banner

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets\style.css"/>
     <title>Task Manager</title>
 
     <!-- #1 header/title -->
-    <h1>TASK LIST</h1>
+    <h1 class="banner">TASK LIST</h1>
     <form>
       Name
       <input type="text" name="Name" size="30" />
