--- a/index.html
+++ b/index.html
@@ -15,21 +15,28 @@
 
     <!-- #1 header/title -->
     <h1 class="banner">TASK LIST</h1>
-    <form>
-      Name
+    <h3 class="ml-3 my-3">Add New Task</h3>
+    <form class="ml-3">
+      Name:
       <input type="text" name="Name" size="30" />
       <br />
       <br />
-      Description
+      Description:
       <input type="text" name="Description" size="30" />
       <br />
       <br />
-      Assigned to
-      <input type="text" name="Assigned to " size="30" />
-      <br />
-      <br />
-      Due date
-      <input type="text" name="Due date " size="30" />
+      <div class="row">
+        <div class="col">
+          Assigned to:
+          <input type="text" name="Assigned to " size="30" />
+        </div>
+        <br />
+        <br />
+        <div class="col">
+          Due date:
+          <input type="text" name="Due date " size="30" />
+        </div>
+      </div>
       <br />
       <br />
     </form>
