add task 5 steps 1 & 2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets\style.css"/>
-    <script src="./script.js" defer></script>
+    <script src="js/taskManager.js" defer></script>
+    <script src="js/index.js" defer></script>
+    
     <title>Task Manager</title>
   </head>
 
@@ -72,7 +74,7 @@
     </form>
 
 
-    
+
     <!-- Task cards section -->
     <div class="task-section">
       <hr style="width:40%;text-align:left;margin-left:0; border-width: 3px; border-color: teal">
