change color of border

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <!-- Task cards section -->
     <div class="task-section">
-      <hr style="width:40%;text-align:left;margin-left:0; border-width: 3px; border-color: teal">
+      <hr style="width:40%;text-align:left;margin-left:0; border-width: 3px; border-color: rgb(238, 242, 242)">
     </div>
     <div class="container">
       <h1 class="banner">Task Manager</h1>
