moved src  for dot js to line 211

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--bootstrap CSS-->
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
+      rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
+   
     <link rel="stylesheet" href="assets\style.css"/>
-    <script src="js/taskManager.js" defer></script>
-    <script src="js/index.js" defer></script>
+
     
    <title>Task Manager</title>
   </head>
@@ -73,12 +71,11 @@
       </div>
     </form>-->
 
-
-
     <!-- Task cards section -->
     <div class="task-section">
       <hr style="width:40%;text-align:left;margin-left:0; border-width: 3px; border-color: rgb(238, 242, 242)">
     </div>
+
     <div class="container">
       <h1 class="banner">Task Manager</h1>
       <div class="row mb-5">
@@ -210,5 +207,10 @@
         </div>
       </div>
     </div>-->
+
+      <script src="js/taskManager.js" defer></script>
+      <script src="js/index.js" defer></script>
+
+
   </body>
 </html>
