changes made with Kathryn

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <br />
       <br />
-    
+    -->
       <!-- Add Task Button -->
       <!--<div class="row">
         <div class="col ml-3">
@@ -76,6 +76,7 @@
       <hr style="width:40%;text-align:left;margin-left:0; border-width: 3px; border-color: rgb(238, 242, 242)">
     </div>
 
+    <div id='errorElement'></div>
     <div class="container">
       <h1 class="banner">Task Manager</h1>
       <div class="row mb-5">
