--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
               </div>
               <div class="form-group col">
                 <label for="newTaskDueDate">Due Date</label>
+                <!--date button-->
                 <input type="date" class="form-control" id="newTaskDueDate" />
               </div>
             </div>
