prettier changes task 8 and 9

--- a/index.html
+++ b/index.html
@@ -23,61 +23,6 @@
   </head>
 
   <body>
-    <!--  #1 header/title 
-    <h1 class="banner">TASK LIST</h1>
-    <h3 class="ml-3 my-3">Add New Task</h3>
-
-    <div id="error"></div>
-
-    <br />
-    <form id="form" action="/" method="GET" class="ml-3">
-      <div class="row">
-        <div class="col">
-
-          <label for="name">Name:</label>
-          <br />
-          <input id="name" type="text" name="name" size="30"/>
-
-        </div>
-      </div>
-      <br />
-      <div class="row">
-        <div class="col">
-          <label for="description">Description:</label>
-          <br />
-          <input id="description" type="text" name="description" size="30" />
-        </div>
-      </div>
-      <br />
-      <div class="row">
-        <div class="col">
-          <label for="assignedTo">Assigned to:</label>
-          <br />
-          <input id="assignedTo" type="text" name="assignedTo" size="30" />
-        </div>
-
-        <br />
-        <br />
-        <br />
-        <br />
-        
-        <div class="col">
-          <label for="dueDate">Due date:</label>
-          <br />
-          <input id="dueDate" type="date" name="dueDate" size="30" />
-        </div>
-      </div>
-      <br />
-      <br />
-    -->
-    <!-- Add Task Button -->
-    <!--<div class="row">
-        <div class="col ml-3">
-          <button type="submit" class="btn btn-primary">Add Task</button>
-        </div> 
-      </div>
-    </form>-->
-
     <!-- Task cards section -->
     <div class="task-section">
       <hr
@@ -99,7 +44,7 @@
           <h2>Add New Task</h2>
           <form id="newTaskForm">
             <div class="form-group">
-              <label for="newTaskNameInput">Name</label>
+              <label for="newTaskNameInput">Task Name</label>
               <input
                 type="text"
                 class="form-control"
@@ -239,6 +184,22 @@
         </div>
       </div>
     </div>-->
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="js/taskManager.js" defer></script>
     <script src="js/index.js" defer></script>
