update add task button and due date control
add task button full width, due date picker limited to today and future dates

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <!--  #1 header/title 
+    <!--  #1 header/title
     <h1 class="banner">TASK LIST</h1>
     <h3 class="ml-3 my-3">Add New Task</h3>
 
@@ -60,7 +60,7 @@
         <br />
         <br />
         <br />
-        
+
         <div class="col">
           <label for="dueDate">Due date:</label>
           <br />
@@ -74,7 +74,7 @@
     <!--<div class="row">
         <div class="col ml-3">
           <button type="submit" class="btn btn-primary">Add Task</button>
-        </div> 
+        </div>
       </div>
     </form>-->
 
@@ -131,7 +131,11 @@
                 <input type="date" class="form-control" id="newTaskDueDate" />
               </div>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">
+            <button
+              id="addtaskbutton"
+              type="submit"
+              class="btn btn-primary btn-block"
+            >
               Add Task
             </button>
           </form>
