--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <h2>Add New Task</h2>
           <form id="newTaskForm">
             <div class="form-group">
-              <label for="newTaskNameInput">Name</label>
+              <label for="newTaskNameInput">Task Name</label>
               <input
                 type="text"
                 class="form-control"
