add placeholder text

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 class="form-control"
                 id="newTaskNameInput"
                 name="name"
+                placeholder="Name the task"
               />
             </div>
             <div class="form-group">
@@ -114,6 +115,7 @@
                 name="description"
                 class="form-control"
                 id="newTaskDescription"
+                placeholder="Describe the  task here"
               ></textarea>
             </div>
             <div class="form-row">
@@ -123,6 +125,7 @@
                   type="text"
                   class="form-control"
                   id="newTaskAssignedTo"
+                  placeholder="Who should complete this task?"
                 />
               </div>
               <div class="form-group col">
