--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="assets\style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
+
+    <script src="js/index.js" type="module"></script>
 
     <title>Task Manager</title>
   </head>
@@ -246,8 +248,5 @@
         </div>
       </div>
     </div>-->
-
-    <script src="js/taskManager.js" defer></script>
-    <script src="js/index.js" defer></script>
   </body>
 </html>
